k8s/30-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invguard-frontend
  namespace: invguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invguard-frontend
  template:
    metadata:
      labels:
        app: invguard-frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
      containers:
        - name: frontend
          image: invguard-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          # Writable tmp locations for nginx
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: invguard-frontend
  namespace: invguard
spec:
  selector:
    app: invguard-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
